Use fancy emojis

--- a/.github/workflows/action-updater.yml
+++ b/.github/workflows/action-updater.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3.1.0
+      - name: 🛒 Checkout repository
+        uses: actions/checkout@v3.1.0
         with:
           token: ${{ secrets.BUNIT_BOT_TOKEN }}
 
@@ -22,7 +23,7 @@ jobs:
           gpg-private-key: ${{ secrets.BUNIT_BOT_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.BUNIT_BOT_GPG_KEY_PASSPHRASE }}
 
-      - name: Run GitHub Actions Version Updater
+      - name: 💡 Run GitHub Actions Version Updater
         uses: saadmk11/github-actions-version-updater@v0.7.1
         with:
           token: ${{ secrets.BUNIT_BOT_TOKEN }}
