--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
 
       - name: ⚙️ Import GPG key
         id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v3
+        uses: crazy-max/ghaction-import-gpg@v5
         with:
-          gpg-private-key: ${{ secrets.BUNIT_BOT_GPG_PRIVATE_KEY }}
+          gpg_private_key: ${{ secrets.BUNIT_BOT_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.BUNIT_BOT_GPG_KEY_PASSPHRASE }}
 
       - name: ⚙️ Setup CI GIT
@@ -69,7 +69,7 @@ jobs:
             7.0.x
 
       - name: 🛠️ Update changelog
-        uses: thomaseizinger/keep-a-changelog-new-release@1.2.1
+        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
         with:
           version: ${{ env.NBGV_SemVer2 }}
 
@@ -125,7 +125,7 @@ jobs:
 
       - name: ⏭ Create pull request from stable to main when direct merge fails
         if: steps.mergeMainline.outcome == 'failure'
-        uses: thomaseizinger/create-pull-request@1.0.0
+        uses: thomaseizinger/create-pull-request@1.2.2
         env:
           GITHUB_TOKEN: ${{ secrets.BUNIT_BOT_TOKEN }}
         with:
