--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -14,6 +14,7 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="$(MSBuildProjectName) != 'bunit.testassets'">
+		<PackageReference Include="Xunit.StaFact" Version="1.1.11" />
 		<PackageReference Include="AutoFixture" Version="4.17.0" />
 		<PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
 	    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
