--- a/src/bunit.web/bunit.web.csproj
+++ b/src/bunit.web/bunit.web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
@@ -16,7 +16,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="AngleSharp" Version="1.0.1" />
-		<PackageReference Include="AngleSharp.Diffing" Version="0.17.0" />
+		<PackageReference Include="AngleSharp.Diffing" Version="0.17.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
