--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,9 +92,9 @@ jobs:
 
       - name: 🛠️ Packing library in release mode
         run: |
-          dotnet pack -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
-          dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
-          dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack -c Release /p:PublishDir=${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack src/bunit/ -c Release /p:PublishDir=${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack src/bunit.template/ -c Release /p:PublishDir=${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
 
       - name: 🛠️ Upload library to NuGet.org repository
         run: |
