--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -36,3 +36,5 @@
 ##########################################
 # Custom - Code Analyzers Rules
 ##########################################
+
+dotnet_diagnostic.S1133.severity = none # S1133: Deprecated code should be removed
