--- a/.editorconfig
+++ b/.editorconfig
@@ -505,3 +505,4 @@ dotnet_diagnostic.S3459.severity = none # S3459: Unassigned members should be re
 dotnet_diagnostic.S3871.severity = none # S3871: Exception types should be "public"
 dotnet_diagnostic.S1186.severity = none # S1186: Methods should not be empty
 dotnet_diagnostic.S1133.severity = none # S1133: Deprecated code should be removed
+dotnet_diagnostic.S3963.severity = none # S3963: "static" fields should be initialized inline (covered by CA1810)
