--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,8 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup Label="Configuration variables">
-		<DotNet6Version>6.0.0</DotNet6Version>
-		<DotNet7Version>7.0.0</DotNet7Version>
+		<DotNet8Version>8.0.0-*</DotNet8Version>
 	</PropertyGroup>
 
 	<!-- Solution wide properties -->
