--- a/tests/bunit.core.tests/bunit.core.tests.csproj
+++ b/tests/bunit.core.tests/bunit.core.tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Core.Tests</AssemblyName>
 	</PropertyGroup>
